Apply checkstyle update